Material Distribution Cache
Relates to IIS-8543

--- a/src/Iis.MaterialDistributor/appsettings.json
+++ b/src/Iis.MaterialDistributor/appsettings.json
@@ -43,14 +43,14 @@
             "WithCorrelationId"
         ]
     },
-  "elasticSearch": {
-    "Uri": "http://192.168.88.93:20468",
-    "IndexPreffix": "ont_",
-    "totalFieldsLimit": 4096,
-    "DefaultLogin": "elastic",
-    "DefaultPassword": "PW4RAqW5mIGF2oMR",
-    "ScrollDurationMinutes": 2
-  },
+    "elasticSearch": {
+        "Uri": "http://localhost:9200",
+        "IndexPreffix": "ont_",
+        "totalFieldsLimit": 4096,
+        "DefaultLogin": "elastic",
+        "DefaultPassword": "112233",
+        "ScrollDurationMinutes": 2
+    },
     "ConnectionStrings": {
         "db": "Server=localhost;Database=contour_dev_net;Username=postgres;Password=123"
     },
