--- a/src/.editorconfig
+++ b/src/.editorconfig
@@ -134,3 +134,9 @@ dotnet_diagnostic.CA1812.severity = none
 
 # CA1014: Mark assemblies with CLSCompliant
 dotnet_diagnostic.CA1014.severity = none
+
+# CA1725: Parameter names should match base declaration
+dotnet_diagnostic.CA1725.severity = none
+
+# CA2201: Do not raise reserved exception types
+dotnet_diagnostic.CA2201.severity = none
