feat: update HotChocolate
Closes IIS-8592

--- a/src/Iis.Services/Iis.Services.csproj
+++ b/src/Iis.Services/Iis.Services.csproj
@@ -12,6 +12,7 @@
 	
   <ItemGroup>
     <PackageReference Include="GeoJSON.Net" Version="1.2.14" />
+    <PackageReference Include="Microsoft.Extensions.Identity.Core" Version="3.1.22" />
     <PackageReference Include="Morelinq" Version="3.3.2" />
     <PackageReference Include="Novell.Directory.Ldap.NETStandard" Version="3.2.0" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
