Resolve IIS-8659 "Dummy service remove"

--- a/src/Iis.Api/appsettings.Development.json
+++ b/src/Iis.Api/appsettings.Development.json
@@ -7,5 +7,17 @@
   "jwt": {
     "lifeTime": "900:00:00"
   },
+  "activeDirectory": {
+    "server": "192.168.88.31",
+    "login": "iis",
+    "password": "VPkqGPv!"
+  },
+  "externalUserService": {
+    "Server": "192.168.88.154",
+    "Domain": "DC=contour,DC=com",
+    "Port": 389,
+    "Username": "Admin",
+    "Password": "ZAQ!2wsx"
+  },
   "reportsAvailable": "true"
 }
