--- a/src/Iis.Api/appsettings.json
+++ b/src/Iis.Api/appsettings.json
@@ -146,9 +146,9 @@
         }
     },
     "activeDirectory": {
-        "server": "192.168.88.31",
-        "login": "iis",
-        "password": "VPkqGPv!"
+        "server": "",
+        "login": "",
+        "password": ""
     },
     "salt": null,
     "defaultUserName": "olya",
@@ -166,12 +166,11 @@
         "errorFolder": "D:\\!Work\\data-collector\\export\\error"
     },
     "externalUserService": {
-        "ServiceType": "ad",
-        "Server": "192.168.88.154",
-        "Domain": "DC=contour,DC=com",
-        "Port": 389,
-        "Username": "Admin",
-        "Password": "ZAQ!2wsx"
+        "Server": "",
+        "Domain": "",
+        "Port": 0,
+        "Username": "",
+        "Password": ""
     },
     "matrix": {
         "Enabled": true,
