--- a/src/Iis.AcceptanceTests/Iis.AcceptanceTests.csproj
+++ b/src/Iis.AcceptanceTests/Iis.AcceptanceTests.csproj
@@ -41,6 +41,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Http.Extensions" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="5.0.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.4" />
+    <PackageReference Include="Naudio.Lame" Version="2.0.1" />
     <PackageReference Include="NPOI" Version="2.5.3" />
     <PackageReference Include="Selenium.Support" Version="3.141.0" />
     <PackageReference Include="Selenium.WebDriver.ChromeDriver" Version="89.0.4389.2300" />
